--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "materialize-css": "^1.0.0-rc.2"
   }
 }
