--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "materialize-css": "^1.0.0-rc.2"
+    "materialize-css": "^1.0.0-rc.2",
+    "mdbootstrap": "^4.5.9"
   }
 }
