--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node js/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,8 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0-rc.2",
-    "mdbootstrap": "^4.5.9"
+    "mdbootstrap": "^4.5.9",
+    "module_name": "^1.0.0",
+    "node-http-server": "^8.1.2"
   }
 }
